--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
             align-items: center;
             justify-content: center;
             gap: 0.75rem;
-            margin-bottom: 2rem;
+            margin-bottom: 0.75rem;
         }
 
         .date-nav-btn {
@@ -1009,9 +1009,12 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
             flex-wrap: wrap;
-            gap: 0.75rem;
+            gap: 0.5rem;
+            background: var(--bg-secondary);
+            padding: 0.6rem 1rem;
+            border-radius: 10px;
         }
 
         .include-free-checkbox {
@@ -1202,10 +1205,6 @@
         }
 
         .person-count {
-            background: var(--bg-secondary);
-            padding: 0.75rem 1rem;
-            border-radius: 10px;
-            margin-bottom: 1rem;
             font-size: 0.9rem;
             color: var(--text-secondary);
             display: flex;
@@ -1215,6 +1214,10 @@
 
         .person-count strong {
             color: var(--accent);
+        }
+
+        .worker-card.free-day {
+            border: 2px solid var(--success);
         }
 
         /* Schedules List */
@@ -1230,9 +1233,9 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 1rem 1.25rem;
-            background: var(--accent);
-            color: white;
+            padding: 0.75rem 1rem;
+            background: var(--bg-secondary);
+            color: var(--text-primary);
             cursor: pointer;
             transition: all 0.2s ease;
             /* iOS touch improvements */
@@ -1243,11 +1246,10 @@
         }
 
         .schedule-list-header:hover {
-            opacity: 0.9;
+            background: rgba(230, 57, 70, 0.05);
         }
 
         .schedule-list-header:active {
-            opacity: 0.8;
             transform: scale(0.99);
         }
 
@@ -1323,7 +1325,7 @@
 
         .schedule-list-meta {
             font-size: 0.85rem;
-            opacity: 0.8;
+            color: var(--text-secondary);
         }
 
         .schedule-list-actions {
@@ -1332,9 +1334,9 @@
         }
 
         .schedule-list-btn {
-            background: rgba(255, 255, 255, 0.2);
-            border: none;
-            color: inherit;
+            background: var(--bg-primary);
+            border: 1px solid var(--border);
+            color: var(--text-secondary);
             padding: 0.4rem 0.75rem;
             border-radius: 8px;
             font-size: 0.85rem;
@@ -1344,15 +1346,19 @@
         }
 
         .schedule-list-btn:hover {
-            background: rgba(255, 255, 255, 0.3);
+            background: var(--bg-secondary);
+            border-color: var(--accent);
+            color: var(--accent);
         }
 
         .schedule-list-btn.delete {
-            background: rgba(255, 255, 255, 0.15);
+            border-color: var(--border);
         }
 
         .schedule-list-btn.delete:hover {
-            background: rgba(255, 100, 100, 0.4);
+            background: rgba(230, 57, 70, 0.1);
+            border-color: var(--accent);
+            color: var(--accent);
         }
 
         .toggle-icon {
@@ -1820,7 +1826,7 @@
                 <button type="button" class="login-btn" onclick="createPassword()">Skapa</button>
             </div>
 
-            <div class="version-text">Version 0.02</div>
+            <div class="version-text">Version 0.05</div>
         </div>
     </div>
 
@@ -1862,7 +1868,7 @@
                 Ladda upp schema
             </button>
         </div>
-        <div class="sidebar-version">Version 0.02</div>
+        <div class="sidebar-version">Version 0.05</div>
     </nav>
 
     <!-- Main Content -->
@@ -1959,7 +1965,7 @@
 
         // ============================================
         // APP VERSION
-        const APP_VERSION = '0.02';
+        const APP_VERSION = '0.05';
 
         // FIREBASE CONFIGURATION
         // ============================================
@@ -2011,18 +2017,75 @@
             return passwordRef.set(hash);
         }
 
-        function isLoggedIn() {
+        // ============================================
+        // IndexedDB for persistent device-specific session
+        // ============================================
+        const DB_NAME = 'SchemaApp';
+        const STORE_NAME = 'session';
+
+        function openSessionDB() {
+            return new Promise((resolve, reject) => {
+                const request = indexedDB.open(DB_NAME, 1);
+                request.onerror = () => reject(request.error);
+                request.onsuccess = () => resolve(request.result);
+                request.onupgradeneeded = (event) => {
+                    const db = event.target.result;
+                    if (!db.objectStoreNames.contains(STORE_NAME)) {
+                        db.createObjectStore(STORE_NAME);
+                    }
+                };
+            });
+        }
+
+        async function isLoggedInDB() {
+            try {
+                const db = await openSessionDB();
+                return new Promise((resolve) => {
+                    const tx = db.transaction(STORE_NAME, 'readonly');
+                    const store = tx.objectStore(STORE_NAME);
+                    const request = store.get('loggedIn');
+                    request.onsuccess = () => resolve(request.result === true);
+                    request.onerror = () => resolve(false);
+                });
+            } catch (e) {
+                console.log('IndexedDB read error:', e);
+                return false;
+            }
+        }
+
+        async function setLoggedInDB(value) {
+            try {
+                const db = await openSessionDB();
+                return new Promise((resolve) => {
+                    const tx = db.transaction(STORE_NAME, 'readwrite');
+                    const store = tx.objectStore(STORE_NAME);
+                    if (value) {
+                        store.put(true, 'loggedIn');
+                    } else {
+                        store.delete('loggedIn');
+                    }
+                    tx.oncomplete = () => resolve(true);
+                    tx.onerror = () => resolve(false);
+                });
+            } catch (e) {
+                console.log('IndexedDB write error:', e);
+                return false;
+            }
+        }
+
+        // Try localStorage as fallback
+        function isLoggedInLocal() {
             try {
                 if (storage) {
                     return storage.getItem(SESSION_KEY) === 'active';
                 }
             } catch (e) {
-                console.log('Kunde inte läsa session:', e);
+                console.log('localStorage read error:', e);
             }
             return false;
         }
 
-        function setLoggedIn(value) {
+        function setLoggedInLocal(value) {
             try {
                 if (storage) {
                     if (value) {
@@ -2032,8 +2095,24 @@
                     }
                 }
             } catch (e) {
-                console.log('Kunde inte spara session:', e);
+                console.log('localStorage write error:', e);
             }
+        }
+
+        // Combined session check (IndexedDB + localStorage)
+        async function isLoggedIn() {
+            // Try IndexedDB first (more persistent)
+            const dbLoggedIn = await isLoggedInDB();
+            if (dbLoggedIn) return true;
+
+            // Fallback to localStorage
+            return isLoggedInLocal();
+        }
+
+        // Save session to both storages
+        async function setLoggedIn(value) {
+            await setLoggedInDB(value);
+            setLoggedInLocal(value);
         }
 
         async function initAuth() {
@@ -2041,8 +2120,9 @@
             const loginForm = document.getElementById('loginForm');
             const setupForm = document.getElementById('setupForm');
 
-            // Check if already logged in
-            if (isLoggedIn()) {
+            // Check if already logged in on this device
+            const loggedIn = await isLoggedIn();
+            if (loggedIn) {
                 loginScreen.classList.add('hidden');
                 return;
             }
@@ -2081,8 +2161,8 @@
                 const inputHash = await sha256Hash(password);
 
                 if (inputHash === storedHash) {
-                    // Success
-                    setLoggedIn(true);
+                    // Success - save session to device
+                    await setLoggedIn(true);
                     document.getElementById('loginScreen').classList.add('hidden');
                     document.getElementById('loginPassword').value = '';
                     loginError.classList.remove('show');
@@ -2135,7 +2215,9 @@
                 // Save password hash to Firebase
                 const hash = await sha256Hash(password);
                 await savePasswordHash(hash);
-                setLoggedIn(true);
+
+                // Save session to device
+                await setLoggedIn(true);
 
                 // Hide login screen
                 document.getElementById('loginScreen').classList.add('hidden');
@@ -2962,10 +3044,10 @@
             // Build filter row HTML
             const filterRowHtml = `
                 <div class="filter-row">
-                    <div class="person-count">👥 <strong>${workersToday.length}</strong> personer arbetar${includeFree && freeToday.length > 0 ? `, <strong>${freeToday.length}</strong> lediga` : ''}</div>
+                    <div class="person-count">👥 <strong>${workersToday.length}</strong> arbetar${includeFree && freeToday.length > 0 ? `, <strong>${freeToday.length}</strong> lediga` : ''}</div>
                     <label class="include-free-checkbox">
                         <input type="checkbox" id="includeFreeCheckbox" ${includeFree ? 'checked' : ''}>
-                        Inkludera lediga
+                        Lediga
                     </label>
                 </div>
             `;
@@ -3001,8 +3083,9 @@
                 const serviceClass = worker.isFree ? 'service-free' : 'service-badge';
                 const displayService = formatServiceDisplay(worker.service);
                 const timeDisplay = worker.isFree ? 'Ledig' : escapeHtml(worker.time || '-');
+                const freeClass = worker.isFree ? ' free-day' : '';
                 html += `
-                    <div class="worker-card clickable" style="animation-delay: ${index * 0.02}s" onclick="openPersonModal('${escapeHtml(worker.name).replace(/'/g, "\\'")}')">
+                    <div class="worker-card clickable${freeClass}" style="animation-delay: ${index * 0.02}s" onclick="openPersonModal('${escapeHtml(worker.name).replace(/'/g, "\\'")}')">
                         <div class="worker-avatar">${initials}</div>
                         <div class="worker-info">
                             <span class="worker-name">${escapeHtml(worker.name)}</span>
