--- a/index.html
+++ b/index.html
@@ -1836,7 +1836,7 @@
                 <button type="button" class="login-btn" onclick="createPassword()">Skapa</button>
             </div>
 
-            <div class="version-text">Version 0.11</div>
+            <div class="version-text">Version 0.12</div>
         </div>
     </div>
 
@@ -1878,7 +1878,7 @@
                 Ladda upp schema
             </button>
         </div>
-        <div class="sidebar-version">Version 0.11</div>
+        <div class="sidebar-version">Version 0.12</div>
     </nav>
 
     <!-- Main Content -->
@@ -1975,7 +1975,7 @@
 
         // ============================================
         // APP VERSION
-        const APP_VERSION = '0.11';
+        const APP_VERSION = '0.12';
 
         // FIREBASE CONFIGURATION
         // ============================================
@@ -3340,8 +3340,8 @@
             modal.style.cssText = 'padding: 0;';
             modal.innerHTML = `
                 <div class="modal-content" style="max-width: 100%; width: 100%; height: 100%; max-height: 100%; border-radius: 0; display: flex; flex-direction: column;">
-                    <div class="modal-header" style="display: flex; align-items: center; gap: 1rem;">
-                        <button class="modal-close" onclick="closeEditScheduleModal()" style="position: static; order: -1;">✕</button>
+                    <div class="modal-header" style="display: flex; align-items: center; gap: 1rem; padding-top: calc(1.25rem + env(safe-area-inset-top)); min-height: 56px;">
+                        <button class="modal-close" onclick="closeEditScheduleModal()" style="position: static; order: -1; min-width: 44px; min-height: 44px;">✕</button>
                         <h2 class="modal-title" style="flex: 1;">${escapeHtml(person.name)}</h2>
                     </div>
                     <div class="schedule-table-header" style="background: var(--bg-secondary); border-bottom: 2px solid var(--border);">
@@ -3384,6 +3384,9 @@
                 if (parts.length >= 2) endTime = parts[1].trim();
             }
 
+            // Check if already marked as Frånvarande
+            const isAbsent = (entry.service || '').toUpperCase() === 'FRÅNVARANDE';
+
             const modal = document.createElement('div');
             modal.className = 'modal-overlay active';
             modal.id = 'editFieldModal';
@@ -3398,9 +3401,13 @@
                             <label style="display: block; margin-bottom: 0.5rem; font-weight: 500; color: var(--text-secondary);">Starttid</label>
                             <input type="time" id="editStartTime" value="${startTime}" style="width: 100%; padding: 0.75rem; border: 2px solid var(--border); border-radius: 10px; font-size: 16px; background: var(--bg-primary); color: var(--text-primary);">
                         </div>
-                        <div style="margin-bottom: 1.5rem;">
+                        <div style="margin-bottom: 1rem;">
                             <label style="display: block; margin-bottom: 0.5rem; font-weight: 500; color: var(--text-secondary);">Sluttid</label>
                             <input type="time" id="editEndTime" value="${endTime}" style="width: 100%; padding: 0.75rem; border: 2px solid var(--border); border-radius: 10px; font-size: 16px; background: var(--bg-primary); color: var(--text-primary);">
+                        </div>
+                        <div style="margin-bottom: 1.5rem; display: flex; align-items: center; gap: 0.75rem; padding: 0.75rem; background: var(--bg-primary); border-radius: 10px; border: 2px solid var(--border);">
+                            <input type="checkbox" id="editAbsentCheckbox" ${isAbsent ? 'checked' : ''} style="width: 20px; height: 20px; cursor: pointer;">
+                            <label for="editAbsentCheckbox" style="font-weight: 500; color: var(--text-primary); cursor: pointer;">Frånvarande</label>
                         </div>
                         <button class="btn" style="width: 100%; margin: 0;" onclick="saveTimeEdit(${personIndex}, ${entryIndex})">Spara</button>
                     </div>
@@ -3455,17 +3462,32 @@
         function saveTimeEdit(personIndex, entryIndex) {
             const startTime = document.getElementById('editStartTime').value;
             const endTime = document.getElementById('editEndTime').value;
+            const isAbsent = document.getElementById('editAbsentCheckbox').checked;
 
-            let timeStr = '';
-            if (startTime && endTime) {
-                timeStr = `${startTime}-${endTime}`;
-            } else if (startTime) {
-                timeStr = startTime;
-            } else if (endTime) {
-                timeStr = endTime;
+            const entry = scheduleData.people[personIndex].entries[entryIndex];
+
+            // If marked as Frånvarande, set service to Frånvarande (time stays unchanged)
+            if (isAbsent) {
+                entry.service = 'Frånvarande';
+            } else {
+                // If was Frånvarande but checkbox is now unchecked, we need to keep the service
+                // but update the time
+                let timeStr = '';
+                if (startTime && endTime) {
+                    timeStr = `${startTime}-${endTime}`;
+                } else if (startTime) {
+                    timeStr = startTime;
+                } else if (endTime) {
+                    timeStr = endTime;
+                }
+                entry.time = timeStr;
+
+                // If service was Frånvarande and is now unchecked, clear it
+                if ((entry.service || '').toUpperCase() === 'FRÅNVARANDE') {
+                    entry.service = '';
+                }
             }
 
-            scheduleData.people[personIndex].entries[entryIndex].time = timeStr;
             saveToLocalStorage();
             closeEditFieldModal();
             closeEditScheduleModal();
